# eitango-test-api

./: .env.default  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  spreadsheet.py
.github/workflows/: heroku_deploy.yml  setup_deploy.yml  setup_spreadsheet.yml
api_test/: api_test.py
constants/: url.py
cruds/: word.py
routers/: word.py
schemas/: word.py
scripts/: api_test.sh  init.sh  run_api.sh  setup_spreadsheet.sh
util/: datetime.py
